--- a/ContactForm.html
+++ b/ContactForm.html
@@ -9,7 +9,7 @@
             <div class="left">
             <img src="Asset/download.png" alt="logo">
             <ul>
-                <li><a href="Card.html">Home</a></li>    
+                <li><a href="index.html">Home</a></li>    
             </ul>
             <ul>
                 <li><a href="blog.html">Blog</a></li>
