--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
       <div class="left">
         <img src="Asset/download.png" alt="logo">
         <ul>
-            <li><a href="Card.html">Home</a></li>    
+            <li><a href="index.html">Home</a></li>    
         </ul>
         <ul>
           <li><a href="blog.html"style="color: rgb(218, 106, 32);">Blog</a></li>
