--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="left">
         <img src="Asset/download.png" alt="logo">
         <ul>
-            <li><a href="Card.html" style="color: rgb(218, 106, 32);">Home</a></li>    
+            <li><a href="index.html" style="color: rgb(218, 106, 32);">Home</a></li>    
         </ul>
         <ul>
             <li><a href="blog.html">Blog</a></li>
