--- a/blog-detail.html
+++ b/blog-detail.html
@@ -8,10 +8,10 @@
       <div class="left">
         <img src="Asset/download.png" alt="logo">
         <ul>
-            <li><a href="index.html" style="color: rgb(218, 106, 32);">Home</a></li>    
+            <li><a href="index.html">Home</a></li>    
         </ul>
         <ul>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="blog.html"style="color: rgb(218, 106, 32);">Blog</a></li>
         </ul> 
         </div>
         <div class="right">
