--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
                 </div>
                 <h1>Dean Wahyu Pratanda</h1>
                 <p style="line-height: 30px; color:grey; text-align: justify;">Lorem dolor sit amet consectetur adipisicing elit. Fuga velit fugiat est modi? Voluptatibus voluptatum, eius distinctio aspernatur, accusamus harum sunt explicabo odio repellat aliquid mollitia voluptates dolore eveniet ipsum?</p>
-                <table border="1" style="width: 100%; border-collapse: collapse;" cellpadding="10px" >
+                <table border="1" style="width: 100%; border-collapse: collapse;" >
                 <tr style="background-color: silver;">
-                    <th>Experience</th>
-                    <th>Year</th>
+                    <th style="padding: 10px;">Experience</th>
+                    <th style="padding: 10px">Year</th>
                 </tr>
                 <tr>
-                    <td>Develop Personal Website</td>
-                    <td>2021</td>
+                    <td style="padding: 10px">Develop Personal Website</td>
+                    <td style="padding: 10px; text-align: center;">2021</td>
                 </tr>
                 <tr>
-                    <td>Develop Coffeshop Website</td>
-                    <td>2021</td>
+                    <td style="padding: 10px;">Develop Coffeshop Website</td>
+                    <td style="padding: 10px; text-align: center;">2021</td>
                 </tr>
                 </table>
             </div>
